1.2.0:

* now requires a new version of GMTK (>= 0.1 f6e7c01e2b27 (ticket161)) for increased speed
* now requires Python >=2.6 (released 3.5 years ago) and <=3.0
* now requires Genomedata >=1.3.1
* segway: now has experimental Torque support. PBS and PBS Pro will
  probably work with some changes--please e-mail Michael if you want
  to help with identifying the necessary changes (thanks to Jay Hesselberth)
* segway: new escaping method from Genomedata tracknames to GMTK
  tracknames allows any arbitrary Genomedata trackname, but this means
  that previous files will be incompatible, since "_" is now replaced
  by "_5f" and "." by "_2e" (formerly both of these were "_", which
  was ambiguous)
* segway: allow concatenated segmentation of tracks with --trackname track1,track2, which
  gives you only one set of parameters. you may need to adjust
  existing train.tab files to use track_specs instead of
  include_tracknames because of other necessary changes
* segway: LSF: fix bug where wrapper script sometimes did not delete
  temporary observation files after a crash
* segway: more informative error message when supervision labels overlap each other
* segway: segway.sh has cd command in addition to segway command
* segway: MC/MX/REAL_MAT direct parameters are no longer trained (MEAN/COVAR/DENSECPT parameters are)
* segway-layer: add --bigBed option, which works if you have
  bedToBigBed in your path
* segway: add --bigBed option which calls segway-layer --bigBed
* segway: removes PYTHONINSPECT from environment for sub-tasks, which
  caused identify mode failures before
* segway-layer: fix issue #19. Now doesn't override previous colors
  when mnemonics aren't supplied (thanks to Jay Hesselberth)
* segway-winner: fix issue #21. Now works on Python 2.5.1
* installation: always require drmaa. setuptools extras_require wasn't that useful in practice
* test: use fixed random seed to generate input.master every time