@@ -2,6 +2,8 @@
 
 * now requires a new version of GMTK (>= 0.1 f6e7c01e2b27 (ticket161)) for increased speed
 * now requires Python >=2.6 (released 3.5 years ago) and <=3.0
+  (although we will switch to Python 2.7 when we need it, so if you
+  are upgrading, go all the way now)
 * now requires Genomedata >=1.3.1
 * segway: now has experimental Torque support. PBS and PBS Pro will
   probably work with some changes--please e-mail Michael if you want
